--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/009/384/332/non_2x/old-vintage-book-clipart-design-illustration-free-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>kitaab</title>
   </head>
   <body>
     <div id="root"></div>
